--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,78 +1,50 @@
+<% stylesheet_link_tag 'stylesheets/index.css' %>
 <section class="initial">
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-md-9">
-	            	<h1><fmt:message key="urutau.welcome"/></h1>
-	            	<p>
-	            		<small><fmt:message key="urutau.description"/></small>
-	            	</p>
-            </div>
+        <h1>Welcome to Urutau</h1>
+          <p><small>Simples, adaptavél e aberto</small></p>
+      </div>
 			<div class="col-xs-6 col-md-3">
-				<%@ include file="/WEB-INF/layouts/success.jsp" %>
-				<form action="<c:url value="user/authenticate"/>" class="form-signin" method="POST">
-					<input name="login" class="form-control"
-						placeholder="<fmt:message key='user.login'/>"
-						value="${login}" required autofocus>
-					<input name="password" type="password" class="form-control"
-						placeholder="<fmt:message key='user.password'/>"
-						value="${password}" required>
-					<button class="btn btn-lg btn-primary btn-block"
-						type="submit"><fmt:message key='sign_up'/></button>
-				</form>
-     		</div>
-        </div>
+        <%= form_tag("/user/authenticate", method: "POST", class: "form-signin") do %>
+          <%= text_field_tag(:login, nil, class: "form-control", autofocus: true,
+            required: true, placeholder: "User login") %>
+          <%= password_field_tag(:password, nil, class: "form-control",
+            required: true, placeholder: "Password") %>
+					<%= submit_tag("Login", class: "btn btn-lg btn-primary btn-block") %>
+        <% end %>
+     	</div>
     </div>
+  </div>
 </section>
+
 <section id="register" class="register home-section">
 	 <div class="container">
 		<div class="row">
 			<div class="col-xs-7 col-md-4 col-md-offset-1">
-
-			 	<c:forEach var="error" items="${errors}">
-			 		<c:set var= "errorCategory" value="${error.category}"/>
-	            	<c:if test="${fn:contains(errorCategory, 'user.') || errorCategory.equals('register_validator')}">
-		            	<!-- Show only register errors -->
-		            	<div class="alert alert-danger" role="alert">
-		            		${error.message}
-		            	</div>
-	            	</c:if>
-				</c:forEach>
-
-				<h2><fmt:message key='sign_in'/></h2>
-				<form action="user/register" class="form-signin" method="POST">
-					<input name="user.email" type="email" class="form-control"
-						placeholder="<fmt:message key='user.email'/>"
-						value="${user.email}" required>
-
-					<input name="user.name" class="form-control"
-						placeholder="<fmt:message key='user.name'/>"
-						value="${user.name}" required>
-
-					<input name="user.lastName" class="form-control"
-						placeholder="<fmt:message key='user.lastname'/>"
-						value="${user.lastName}" required>
-
-					<input name="user.login" class="form-control"
-						placeholder="<fmt:message key='user.login'/>"
-						value="${user.login}" required>
-
-					<input name="user.password.userPasswordPassed" type="password" class="form-control"
-						placeholder="<fmt:message key='user.password'/>"
-						value="${user.password.userPasswordPassed}" required>
-
-					<input name="user.passwordVerify" type="password" class="form-control"
-						placeholder="<fmt:message key='user.password_verify'/>" required>
-
-					<input class="btn btn-lg btn-success btn-block"
-						type="submit" value="<fmt:message key='sign_in'/>">
-
+        <!-- PUT REGISTER ERRORS HERE -->
+				<h2>Sign in</h2>
+        <%= form_tag("/user/register", method: "POST", class: "form-signin") do %>
+					<%= email_field "email", nil, class: "form-control",
+            placeholder:"User email", required: true %>
+          <%= text_field_tag "name", nil, class: "form-control",
+            placeholder: "User name", required: true %>
+          <%= text_field_tag "lastName", nil, class: "form-control",
+            placeholder: "User lastname", required: true %>
+          <%= text_field_tag "login", nil, class: "form-control",
+            placeholder: "User login", required: true %>
+          <%= password_field_tag "password", nil, class: "form-control",
+            placeholder: "Password", required: true %>
+          <%= password_field_tag "password_verify", nil, class: "form-control",
+            placeholder: "Confirm your password", required: true %>
+          <%= submit_tag "Register", class: "btn btn-lg btn-success btn-block" %>
 					<p class="info">
-						The registration rules depend  of the enterprise policy. <br/>
-						More information: <a href="#contact"
-							class="page-scroll">Contact administrator</a>.
+  					The registration rules depend  of the enterprise policy.
+            <br/>
+  					More information: <a href="#contact" class="page-scroll">Contact administrator</a>.
 					</p>
-
-				</form>
+        <% end %>
 			</div>
 			<div class="col-xs-6 col-md-4 col-md-offset-2">
 				<div class="thumbnail">
