--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,26 +25,7 @@
 			<div class="col-xs-7 col-md-4 col-md-offset-1">
         <!-- PUT REGISTER ERRORS HERE -->
 				<h2>Sign in</h2>
-        <%= form_tag("/user/register", method: "POST", class: "form-signin") do %>
-					<%= email_field "email", nil, class: "form-control",
-            placeholder:"User email", required: true %>
-          <%= text_field_tag "name", nil, class: "form-control",
-            placeholder: "User name", required: true %>
-          <%= text_field_tag "lastName", nil, class: "form-control",
-            placeholder: "User lastname", required: true %>
-          <%= text_field_tag "login", nil, class: "form-control",
-            placeholder: "User login", required: true %>
-          <%= password_field_tag "password", nil, class: "form-control",
-            placeholder: "Password", required: true %>
-          <%= password_field_tag "password_verify", nil, class: "form-control",
-            placeholder: "Confirm your password", required: true %>
-          <%= submit_tag "Register", class: "btn btn-lg btn-success btn-block" %>
-					<p class="info">
-  					The registration rules depend  of the enterprise policy.
-            <br/>
-  					More information: <a href="#contact" class="page-scroll">Contact administrator</a>.
-					</p>
-        <% end %>
+				<%= render "users/new" %>
 			</div>
 			<div class="col-xs-6 col-md-4 col-md-offset-2">
 				<div class="thumbnail">
