--- a/app/views/users/_new.html.erb
+++ b/app/views/users/_new.html.erb
@@ -1,16 +1,26 @@
-<%= form_for UrutaUser.new, html: {class: "form-signin"} do |f| %>
+<%= form_for @user, html: {class: "form-signin"} do |f| %>
+  <% if @user.errors.any? %>
+    <div class="error_messages">
+      <h3 class="text-warning text-center">Some errors happened!</h3>
+      <ul>
+        <% @user.errors.full_messages.each do |msg| %>
+          <li class="text-danger error-element"><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 
-  <%= f.email_field "email", class: "form-control",
+  <%= f.email_field :email, class: "form-control",
     placeholder:"User email", required: true %>
-  <%= f.text_field "name", class: "form-control",
+  <%= f.text_field :name, class: "form-control",
     placeholder: "User name", required: true %>
-  <%= f.text_field "lastName", class: "form-control",
+  <%= f.text_field :lastName, class: "form-control",
     placeholder: "User lastname", required: true %>
-  <%= f.text_field "login", class: "form-control",
+  <%= f.text_field :login, class: "form-control",
     placeholder: "User login", required: true %>
-  <%= f.password_field "password", class: "form-control",
+  <%= f.password_field :password, class: "form-control",
     placeholder: "Password", required: true %>
-  <%= f.password_field "password_verify", class: "form-control",
+  <%= f.password_field :password_confirmation, class: "form-control",
     placeholder: "Confirm your password", required: true %>
   <%= f.submit "Register", class: "btn btn-lg btn-success btn-block" %>
 
