--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,15 +6,7 @@
         <h1>Welcome to Urutau</h1>
           <p><small>Simples, adaptavél e aberto</small></p>
       </div>
-			<div class="col-xs-6 col-md-3">
-        <%= form_tag("/user/authenticate", method: "POST", class: "form-signin") do %>
-          <%= text_field_tag(:login, nil, class: "form-control", autofocus: true,
-            required: true, placeholder: "User login") %>
-          <%= password_field_tag(:password, nil, class: "form-control",
-            required: true, placeholder: "Password") %>
-					<%= submit_tag("Login", class: "btn btn-lg btn-primary btn-block") %>
-        <% end %>
-     	</div>
+			<%= render "sessions/new" %>
     </div>
   </div>
 </section>
@@ -23,7 +15,6 @@
 	 <div class="container">
 		<div class="row">
 			<div class="col-xs-7 col-md-4 col-md-offset-1">
-        <!-- PUT REGISTER ERRORS HERE -->
 				<h2>Sign in</h2>
 				<%= render "users/new" %>
 			</div>
