--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="navbar navbar-bottom text-center">
+<footer class="text-center fixed-footer">
   <div class="container">
     <div class="row">
       <div class="col-md-4">
