--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,50 +1,53 @@
 <% stylesheet_link_tag 'stylesheets/index.css' %>
-<section class="initial">
-	<div class="container">
-		<div class="row">
-			<div class="col-xs-12 col-md-9">
-        <h1>Welcome to Urutau</h1>
-          <p><small>Simples, adaptavél e aberto</small></p>
-      </div>
-			<%= render "sessions/new" %>
-    </div>
-  </div>
-</section>
 
-<section id="register" class="register home-section">
-	 <div class="container">
-		<div class="row">
-			<div class="col-xs-7 col-md-4 col-md-offset-1">
-				<h2>Sign in</h2>
-				<%= render "users/new" %>
-			</div>
-			<div class="col-xs-6 col-md-4 col-md-offset-2">
-				<div class="thumbnail">
-					<h1 class="motive">
-						<i class="glyphicon glyphicon-cog"></i> Highly configurable
-					</h1>
-					<div class="caption">
-						Urutau provides how many settings you need
-					</div>
+<div class="wrap">
+	<section class="initial">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 col-md-9">
+	        <h1>Welcome to Urutau</h1>
+	          <p><small>Simples, adaptavél e aberto</small></p>
+	      </div>
+				<%= render "sessions/new" %>
+	    </div>
+	  </div>
+	</section>
+
+	<section id="register" class="register home-section">
+		 <div class="container">
+			<div class="row">
+				<div class="col-xs-7 col-md-4 col-md-offset-1">
+					<h2>Sign in</h2>
+					<%= render "users/new" %>
 				</div>
-				<div class="thumbnail">
-					<h1 class="motive">
-						<i class="glyphicon glyphicon-edit"></i> Easy to contribute
-					</h1>
-					<div class="caption">
-						We build it, to facility your contribute
+				<div class="col-xs-6 col-md-4 col-md-offset-2">
+					<div class="thumbnail">
+						<h1 class="motive">
+							<i class="glyphicon glyphicon-cog"></i> Highly configurable
+						</h1>
+						<div class="caption">
+							Urutau provides how many settings you need
+						</div>
 					</div>
-				</div>
-				<div class="thumbnail">
-					<h1 class="motive">
-						<i class=" glyphicon glyphicon-book"></i>
-						Helpful to manage requirements
-					</h1>
-					<div class="caption">
-						Now you will have control!
+					<div class="thumbnail">
+						<h1 class="motive">
+							<i class="glyphicon glyphicon-edit"></i> Easy to contribute
+						</h1>
+						<div class="caption">
+							We build it, to facility your contribute
+						</div>
+					</div>
+					<div class="thumbnail">
+						<h1 class="motive">
+							<i class=" glyphicon glyphicon-book"></i>
+							Helpful to manage requirements
+						</h1>
+						<div class="caption">
+							Now you will have control!
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-</section>
+	</section>
+</div>
