Renaming user model

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-md-9">
-	        <h1>Welcome to Urutau</h1>
+	        <h1>Welcome to Tothful</h1>
 	          <p><small>Simples, adaptavél e aberto</small></p>
 	      </div>
 				<%= render "sessions/new" %>
@@ -26,7 +26,7 @@
 							<i class="glyphicon glyphicon-cog"></i> Highly configurable
 						</h1>
 						<div class="caption">
-							Urutau provides how many settings you need
+							User provides how many settings you need
 						</div>
 					</div>
 					<div class="thumbnail">
