--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/">Urutau</a>
+        <a class="navbar-brand" href="/">User</a>
       </div>
       <ul class="nav navbar-right top-nav">
         <li class="dropdown">
