Adding more information and structure to user/settings page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,10 +11,10 @@
               <%= current_user.login %>
 						</a>
             <ul class="dropdown-menu" id="top-menu-dropdown">
-              <li><a href="#">see_profile</a></li>
-              <li><a href='/user/settings'>settings</a></li>
+              <li><a href="#">My profile</a></li>
+              <li><a href='/user/settings'>Settings</a></li>
               <li class="divider"></li>
-              <li><a href="/logout"> logout</a></li>
+              <li><a href="/logout">Logout</a></li>
             </ul>
           <% else %>
             <ul class="nav pull-right" id="top-menu-dropdown">
