--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/">User</a>
+        <a class="navbar-brand" href="/">Tothful</a>
       </div>
       <ul class="nav navbar-right top-nav">
         <li class="dropdown">
@@ -11,7 +11,7 @@
               <%= current_user.login %>
 						</a>
             <ul class="dropdown-menu" id="top-menu-dropdown">
-              <li><a href="#">My profile</a></li>
+              <li><a href="/user/<%= current_user.login %>">My profile</a></li>
               <li><a href='/user/settings'>Settings</a></li>
               <li class="divider"></li>
               <li><a href="/logout">Logout</a></li>
