--- a/app/views/users/settings.html.erb
+++ b/app/views/users/settings.html.erb
@@ -10,6 +10,8 @@
       <%= f.input :name %>
       <%= f.input :login %>
       <%= f.input :lastName %>
+      <%= f.input :location %>
+      <%= f.input :work %>
 
       <%= f.button :submit, 'Update', class: 'btn btn-success pull-right' %>
     <% end %>
