Throws error into duplicated login when show user

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -33,7 +33,7 @@
           <li>
             <h2>
               <a href="/projects/new" class="btn btn-success btn-group-justified">
-                Criar projeto
+                <b>Criar projeto <i class="glyphicon glyphicon-plus"></i></b>
               </a>
             </h2>
           </li>
