--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -14,7 +14,7 @@
       </div>
 
       <div class="form-actions">
-        <%= f.button :submit, class: 'btn btn-success pull-right' %>
+        <%= f.button :submit, 'Criar projeto', class: 'btn btn-success pull-right' %>
       </div>
     <% end %>
 
