Initing artifact mechanisms

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -14,7 +14,7 @@
         <a href="#">Projeto <i class="glyphicon glyphicon-home"></i></a>
       </li>
       <li role="presentation">
-        <a href="#">Criar Artefato <i class="glyphicon glyphicon-plus"></i></a>
+        <a href="/artifacts/new">Criar Artefato <i class="glyphicon glyphicon-plus"></i></a>
       </li>
       <li role="presentation">
         <a href="#">Configurações <i class="glyphicon glyphicon-cog"></i></a>
