--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'notes/form', note: @artifact %>
 
-<%= link_to 'Back', notes_path, class: 'btn btn-default'  %>
+<%= link_to 'Back', new_artifact_path, class: 'btn btn-default'  %>
