Creating artifact with right redirect

--- a/app/views/artifacts/new.html.erb
+++ b/app/views/artifacts/new.html.erb
@@ -7,7 +7,7 @@
   <div class="page-content">
     <ul class="artifact-types">
       <% @artifacts.each do |artifact| %>
-        <li><a href="/artifacts/new/<%= artifact.name %>"><%= artifact.name %></a></li>
+        <li><a href="/projects/<%= params[:id] %>/artifacts/new/<%= artifact.name %>"><%= artifact.name %></a></li>
       <% end %>
     </ul>
     <%= link_to 'Voltar', projects_path, class: 'btn btn-default pull-left'  %>
