Adding artifact list style

--- a/app/views/artifacts/new.html.erb
+++ b/app/views/artifacts/new.html.erb
@@ -7,9 +7,13 @@
   <div class="page-content">
     <ul class="artifact-types">
       <% @artifacts.each do |artifact| %>
-        <li><a href="/projects/<%= params[:id] %>/artifacts/new/<%= artifact.name %>"><%= artifact.name %></a></li>
+        <li>
+          <a href="/projects/<%= params[:id] %>/artifacts/new/<%= artifact.name %>">
+            <%= artifact.name %>
+          </a>
+        </li>
       <% end %>
     </ul>
-    <%= link_to 'Voltar', projects_path, class: 'btn btn-default pull-left'  %>
+    <%= link_to 'Voltar', "/projects/#{params[:id]}", class: 'btn btn-default pull-left'  %>
   </div>
 </div>
