Update projects with alert implemented

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
   <body>
     <%= render 'layouts/header' %>
+    <%= render 'layouts/messages' %>
     <div class="wrap container">
       <%= yield %>
     </div>
