--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -5,19 +5,9 @@
   </div>
 
   <div class="page-content">
-    <%= simple_form_for(@project) do |f| %>
-      <%= f.error_notification %>
-
-      <div class="form-inputs">
-        <%= f.input :name %>
-        <%= f.input :description, as: :text %>
-      </div>
-
-      <div class="form-actions">
-        <%= f.button :submit, 'Criar projeto', class: 'btn btn-success pull-right' %>
-      </div>
-    <% end %>
-
-    <%= link_to 'Back', projects_path, class: 'btn btn-default pull-left'  %>
+    <%= render 'form', note: @project %>
   </div>
+
+  <%= link_to 'Back', projects_path, class: 'btn btn-default pull-left'  %>
+
 </div>
