Change project name

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-md-9">
-	        <h1>Welcome to Tothful</h1>
+	        <h1>Welcome to Factbox</h1>
 	          <p><small>Simples, adaptavél e aberto</small></p>
 	      </div>
 				<%= render "sessions/new" %>
