--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <span class="copyright">Copyright &copy; Tothful 2017</span>
+        <span class="copyright">Copyright &copy; Factbox 2017</span>
       </div>
       <div class="col-md-4">
         <ul class="list-inline social-buttons">
