--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,8 +4,11 @@
 	<section class="initial">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-12 col-md-9">
-	        <h1>Welcome to Factbox</h1>
+				<div class="col-md-2">
+					<img src="factbox.png" width="175px" class="img-fluid" alt="Factbox"/>
+				</div>
+				<div class="col-md-7">
+	        <h1>Bem vindo ao Factbox</h1>
 	          <p><small>Simples, adaptavél e aberto</small></p>
 	      </div>
 				<%= render "sessions/new" %>
