--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Note</h1>
 
-<%= render 'form', note: @note %>
+<%= render "#{@type.pluralize}/form", note: @note %>
 
 <%= link_to 'Show', @note %> |
 <%= link_to 'Back', notes_path %>
