Listing only snapshot versions of artifacts

--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -12,6 +12,7 @@
         </button>
         <p>
           <%= flash[:notice] %>
+          <%= flash[:error] %>
         </p>
       </div>
     </div>
