Solving edit link problem

--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -6,6 +6,10 @@
     <%= f.input :type, as: :hidden, input_html: { value: 'Image' } %>
     <%= f.input :title %>
     <%= f.input :description, as: :text %>
+
+    <!-- only when edit -->
+    <%= if @artifact.file.attached? then image_tag url_for(@artifact.file) end %>
+
     <%= f.input :file %>
   </div>
 
