Showing first traceability graph

--- a/app/views/projects/traceability.html.erb
+++ b/app/views/projects/traceability.html.erb
@@ -1,2 +1,2 @@
 <!-- erb: paste this in view -->
-<%= react_component("TraceabilityGraph") %>
+<%= react_component("TraceabilityGraph", { nodes: @nodes.to_json }) %>
