--- a/app/views/projects/traceability.html.erb
+++ b/app/views/projects/traceability.html.erb
@@ -1,2 +1,2 @@
 <!-- erb: paste this in view -->
-<%= react_component("TraceabilityGraph", { nodes: @nodes.to_json }) %>
+<%= react_component("TraceabilityGraph", { nodes: @nodes.to_json, edges: @edges.to_json }) %>
