Fix project index style

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,13 +8,10 @@ html {
 .wrap {
   height: 100%;
   min-height: 100%;
-  margin-bottom: 100px;
 }
 
 header {
-	padding: 20px;
-  margin-bottom: 20px;
-  margin-top: 20px;
+  margin-bottom: 5vh;
 }
 
 footer {
