--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
     <%= render 'layouts/header' %>
     <%= render 'layouts/messages' %>
-    <div class="wrap container">
+    <div class="container wrap">
       <%= yield %>
     </div>
     <%= render 'layouts/footer' %>
