--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,4 @@
-<div class="wrap row">
+<div class="row">
   <div class="card col-md-4">
     <div class="card-body">
       <div class="row justify-content-between">
