--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,20 +3,15 @@
 html {
   position: relative;
   min-height: 100%;
+  height: 100%;
 }
 
 .wrap {
-  height: 100%;
+  height: auto !important;
   min-height: 100%;
 }
 
-header {
-  margin-bottom: 5vh;
-}
-
 footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
   background-color: #F2F2F2;
 	padding: 20px;
