--- a/app/views/projects/_artifact-list.html.erb
+++ b/app/views/projects/_artifact-list.html.erb
@@ -4,7 +4,7 @@
       <% @project.snapshot_artifacts.each do |artifact| %>
         <tr>
           <td><i class="glyphicon <%= artifact.glyph_icon %>"></i> <%= artifact.actable_type %></td>
-          <td><%= link_to artifact.title, controller: "artifacts", action: "show", id: artifact.id %></td>
+          <td><%= link_to artifact.title, artifact.show_link  %></td>
           <td><%= artifact.author.login %></td>
           <td><%= artifact.updated_at.strftime("%B %d %Y %H:%M") %></td>
           <td>
