--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,14 +1,12 @@
 @import "bootstrap";
 
 html {
-  position: relative;
-  min-height: 100%;
   height: 100%;
 }
 
 .wrap {
-  height: auto !important;
-  min-height: 100%;
+  min-height: 80vh;
+  height: 100%;
 }
 
 footer {
