--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="text-center fixed-footer mt-3">
+<footer class="text-center mt-3">
   <div class="container">
     <div class="row">
       <div class="col-md-4">
