Fixing forms buttons and update styles

--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -7,5 +7,8 @@
   <%= f.input :content, as: :text %>
   <%= f.input :source_id, collection: @all_artifacts, prompt: "Select source artifact" %>
 
-  <%= f.button :submit, class: 'btn btn-success pull-right' %>
+  <div class="row mt-3">
+    <%= link_to 'Back', project_path(@artifact.project), class: "btn btn-light mr-1" %>
+    <%= f.button :submit, class: 'btn btn-success pull-right' %>
+  </div>
 <% end %>
