--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -7,12 +7,13 @@
     <%= f.input :title %>
 
     <!-- only when edit -->
-    <%= if @artifact.file.attached? then image_tag(url_for(@artifact.file), width: '100%') end %>
+    <%= if @artifact.file.attached? then image_tag url_for(@artifact.file), class: "img-fluid" end %>
 
-    <%= f.input :file %>
-  </div>
+    <%= f.input :file, class: "mt-3" %>
 
-  <div class="form-actions">
-    <%= f.button :submit, class: 'btn btn-success pull-right' %>
+    <div class="row mt-3">
+      <%= link_to 'Back', project_path(@artifact.project), class: "btn btn-light mr-1" %>
+      <%= f.button :submit, class: 'btn btn-success pull-right' %>
+    </div>
   </div>
 <% end %>
