--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -7,6 +7,6 @@
 </div>
 
 <div class="row mt-3">
-  <%= link_to 'Back', project_path(@artifact.project), class: "btn btn-light" %>
-  <%= link_to 'Edit', edit_note_path(@artifact), class: "btn btn-primary" %>
+  <%= link_to 'Back', project_path(@artifact.project), class: "btn btn-light mr-1" %>
+  <%= link_to 'Edit', edit_image_path(@artifact), class: "btn btn-primary" %>
 </div>
