Fix path to create artifact

--- a/app/views/artifacts/new.html.erb
+++ b/app/views/artifacts/new.html.erb
@@ -1,7 +1,7 @@
 <div class="col-md-8 col-md-offset-2">
   <div class="page-head">
-    <h1>Escolha o tipo de artefato</h1>
-    <small>Esses são os artefatos atualmente suportados</small>
+    <h1>Choose the type of artifact</h1>
+    <small>These are the currently supported artifacts</small>
   </div>
 
   <div class="page-content">
@@ -14,6 +14,6 @@
         </li>
       <% end %>
     </ul>
-    <%= link_to 'Voltar', "/projects/#{params[:id]}", class: 'btn btn-default pull-left'  %>
+    <%= link_to 'Back', "/projects/#{params[:id]}", class: 'btn btn-light pull-left'  %>
   </div>
 </div>
