--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -12,7 +12,7 @@
     </div>
     <div class="dropdown-divider"></div>
     <div class="actions text-center">
-      <a href="/projects/<%= @project.id %>/artifacts/new"  type="button" class="btn btn-light">Criar Artefato</a>
+      <a href="/projects/<%= @project.id %>/artifacts/new"  type="button" class="btn btn-light">Create Artifact</a>
     </div>
   </div>
   <div class="col-md-9">
