--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -15,6 +15,7 @@
       <a href="/projects/<%= @project.id %>/artifacts/new"  type="button" class="btn btn-light">Create Artifact</a>
     </div>
   </div>
+
   <div class="col-md-9">
     <ul class="nav nav-tabs" id="myTab" role="tablist">
       <li class="nav-item">
@@ -27,7 +28,7 @@
           aria-controls="feed"
           aria-selected="true"
         >
-          Feed <i class="glyphicon glyphicon-home"></i>
+          <i class="fa fa-home"></i> Feed
         </a>
       </li>
       <li class="nav-item">
@@ -40,7 +41,7 @@
           aria-controls="artifact"
           aria-selected="false"
         >
-          Artefatos <i class="glyphicon glyphicon-home"></i>
+          <i class="fa fa-list-alt"></i> Artefatos 
         </a>
       </li>
     </ul>
