--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -5,7 +5,8 @@
   <%= f.input :type, as: :hidden, input_html: { value: 'Note' } %>
   <%= f.input :title %>
   <%= f.input :content, as: :text %>
-  <%= f.input :source_id, selected: @artifact.source_id, collection: @all_artifacts, prompt: "Select source artifact" %>
+  <%= f.input :source_id, selected: @artifact.source_id,
+      collection: @available_artifacts, prompt: "Select source artifact" %>
 
   <div class="row mt-3">
     <%= link_to 'Back', project_path(@artifact.project), class: "btn btn-light mr-1" %>
