--- a/app/views/projects/_artifact-list.html.erb
+++ b/app/views/projects/_artifact-list.html.erb
@@ -6,7 +6,7 @@
           <td><i class="glyphicon <%= artifact.glyph_icon %>"></i> <%= artifact.actable_type %></td>
           <td><%= link_to artifact.title, artifact.show_link  %></td>
           <td><%= artifact.author.login %></td>
-          <td><%= time_ago_in_words artifact.updated_at.strftime("%B %d %Y %H:%M") %></td>
+          <td><%= time_ago_in_words artifact.time_creation %></td>
           <td>
             <a href="<%= artifact.edit_link %>">
               <i class="fa fa-edit"></i>
