Add traceability option in project page

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -44,6 +44,14 @@
           <i class="fa fa-list-alt"></i> Artefatos
         </a>
       </li>
+      <li class="nav-item">
+        <a
+          href="/traceability/<%=@project.id%>"
+          class="nav-link"
+        >
+          <i class="fa fa-circle"></i> Traceability
+        </a>
+      </li>
       <% @plugins.each do |plugin| %>
         <li class="nav-item">
           <a
