--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -9,5 +9,5 @@
 
 <div class="row mt-3">
   <%= link_to 'Back', project_path(@artifact.project), class: "btn btn-light mr-1" %>
-  <%= link_to 'Edit', edit_note_path(@artifact), class: "btn btn-primary" %>
+  <%= link_to 'Edit', @artifact.edit_link, class: "btn btn-primary" %>
 </div>
