--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -41,7 +41,7 @@
           aria-controls="artifact"
           aria-selected="true"
         >
-          <i class="fa fa-list-alt"></i> Artefatos
+          <i class="fa fa-list-alt"></i> Artifacts
         </a>
       </li>
       <li class="nav-item">
