Fix flash messages mechanisms and view alerts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <body>
     <%= render 'layouts/header' %>
     <%= render 'layouts/messages' %>
-    <div class="container wrap">
+    <div class="container wrap mt-3">
       <%= yield %>
     </div>
     <%= render 'layouts/footer' %>
