--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="mb-3">
+<header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light" role="navigation">
     <div class="container">
       <a class="navbar-brand" href="/">Factbox</a>
