--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,20 +1,12 @@
-<% if flash[:notice] %>
-  <script type="text/javascript">
-    $(window).on('load',function() {
-        $('#alert-modal').modal('show');
-    });
-  </script>
-  <div class="modal fade" id="alert-modal" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content alert alert-success">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <p>
-          <%= flash[:notice] %>
-          <%= flash[:error] %>
-        </p>
+<% unless flash.empty? %>
+  <% flash.each do |key, value| %>
+    <div class="alert alert-<%= key %> alert-dismissible fade show" role="alert">
+      <div class="container">
+        <%= value %>
       </div>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
     </div>
-  </div>
+  <% end %>
 <% end %>
