Add factbox to show project

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-3">
     <div class="text-center">
-      <img src="https://is4-ssl.mzstatic.com/image/thumb/Purple115/v4/ee/09/60/ee09606b-da2e-a046-5198-980d6c9eb393/source/512x512bb.jpg"
+      <img src="/factbox.png"
         class="rounded img-fluid"
         alt="Logo"
       >
