--- a/app/views/users/settings.html.erb
+++ b/app/views/users/settings.html.erb
@@ -1,30 +1,31 @@
-<div class="col-md-12">
-  <div class="page-head">
-    <h1>Edit profile</h1>
-    <small>Set your profile informations</small>
+<div class="row">
+  <div class="col-md-12">
+    <div class="page-head">
+      <h1>Edit profile</h1>
+      <small>Set your profile informations</small>
+    </div>
   </div>
+</div>
 
-  <div class="page-content d-flex justify-content-center">
-    <%= simple_form_for(current_user) do |f| %>
-      <div class="row">
-        <div class="col-md-4">
-          <%= f.input :email %>
-          <%= f.input :name %>
-          <%= f.input :login %>
-          <%= f.input :lastName %>
-          <%= f.input :location, placeholder: 'Where you live' %>
-          <%= f.input :work, placeholder: 'Describe your role' %>
-          <%= f.button :submit, 'Update Profile', class: 'btn btn-success' %>
-        </div>
-        <div class="col-md-4 offset-md-2">
-          <%=
-            if current_user.avatar.attached? then
-              image_tag url_for(current_user.avatar), class: "img-fluid img-thumbnail"
-            end
-          %>
-          <%= f.input :avatar, label: 'Profile picture', class: "mt-3" %>
-        </div>
+  <%= simple_form_for(current_user) do |f| %>
+    <div class="row mt-3">
+      <div class="col-md-4">
+        <%= f.input :email %>
+        <%= f.input :name %>
+        <%= f.input :login %>
+        <%= f.input :lastName %>
+        <%= f.input :location, placeholder: 'Where you live' %>
+        <%= f.input :work, placeholder: 'Describe your role' %>
+        <%= f.button :submit, 'Update Profile', class: 'btn btn-success' %>
       </div>
-    <% end %>
-  </div>
+      <div class="col-md-4 offset-md-4">
+        <%=
+          if current_user.avatar.attached? then
+            image_tag url_for(current_user.avatar), class: "img-fluid img-thumbnail"
+          end
+        %>
+        <%= f.input :avatar, label: 'Profile picture', class: "mt-3" %>
+      </div>
+    </div>
+  <% end %>
 </div>
