--- a/app/views/users/sucessful_register.html.erb
+++ b/app/views/users/sucessful_register.html.erb
@@ -1,9 +1,26 @@
 <% stylesheet_link_tag 'stylesheets/sucessful-registration.css' %>
 
-<div class="col-md-6 col-md-offset-3" id="centered-box">
-  <i class="glyphicon glyphicon-envelope text-success"></i>
-  <h2>Sucessful Register</h2>
-  <div class="alert alert-success" role="alert">
-    <p>Please, confirm your email!</p>
-	</div>
+<div class="mt-5">
+  <div class="row d-flex justify-content-center">
+    <div class="col-md-6 align-middle text-center">
+      <div class="text-success">
+        <i class="fa fa-heart display-1 text-danger"></i>
+        <h2>Welcome @<%= current_user.login %></h2>
+      </div>
+      <div class="mt-3 text-muted">
+        <p>
+          Thank your for joining in Factbox Beta. Updates and releases are
+          released frequently. I hope you have a great experience!
+        </p>
+        <p>
+          You can contribute with me in my
+          <a href="https://github.com/factbox/factbox">repository</a>,
+          or by communicating my maintainer via email: phwener@gmail.com
+        </p>
+      </div>
+      <a href="/" alt="Go to home page">
+        <h4><i class="fa fa-home"></i></h4>
+      </a>
+    </div>
+  </div>
 </div>
